Fix dropdown menu links text alignment

--- a/frontend/app/assets/stylesheets/archivesspace/toolbar.less
+++ b/frontend/app/assets/stylesheets/archivesspace/toolbar.less
@@ -67,3 +67,8 @@
     }
   }
 }
+
+// force dropdown menu items to be text aligned left
+.dropdown-menu > li {
+  text-align: left;
+}
